<resources>
    <string name="app_name">Pr1XavierRoca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="usuari">Usuari</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imatge_1">imatge 1</string>
    <string name="protectora_web">Protectora Web</string>
    <string name="protectora_d_animals_matarosaveanimals">Protectora d\'animals MataroSaveAnimals</string>
    <string name="any">Any</string>
    <string name="mes">Mes</string>
    <string name="dia">Dia</string>
    <string name="inici">Inici</string>
    <string name="Final">Final</string>
    <string name="enviar">Enviar</string>
</resources>