<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navCalendari">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:text="@string/inici"
        android:layout_gravity="center"
        android:layout_marginBottom="180dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="80dp"
        android:id="@+id/etAnyin"
        android:hint="@string/any"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:id="@+id/etMesin"
        android:hint="@string/mes"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="80dp"
        android:id="@+id/etDiain"
        android:hint="@string/dia"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/Final"
        android:id="@+id/tvRes3"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="80dp"
        android:id="@+id/etAnyfi"
        android:hint="@string/any"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:id="@+id/etMesfi"
        android:hint="@string/mes"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginStart="80dp"
        android:id="@+id/etDiafi"
        android:hint="@string/dia"
        android:inputType="number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:id="@+id/bEnviar"
        />

</FrameLayout>