<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logovallbona"
        android:id="@+id/imLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etUsuari"
        android:hint="@string/usuari"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/imLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPass"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/etUsuari"
        app:layout_constraintStart_toStartOf="@id/etUsuari"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRegister"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/etPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bLogin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/etPass"
        app:layout_constraintStart_toStartOf="@id/bRegister"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>